# mumoco

./: .deepsource.toml  .flake8  .gitignore  README.adoc  README.md  build.py  build.sh  example.sh  lint.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py  setup.sh  sonar-project.properties  tasks.py  tbump.toml
.github/: dependabot.yml
.github/workflows/: build-with-poetry.yml  build.yml  lint-pr.yml  pr.yml  python-package.yml  release.yml  upload-python-package.yml
conan_example_project/: build.py  build.sh  config-build.json  mumoco.json  mumoco_build.py
conan_example_project/Base/: conanfile.py
conan_example_project/a/: CMakeLists.txt  conanfile.py  cpputest.py
conan_example_project/a/src/: CMakeLists.txt  a.c
conan_example_project/a/test/: CMakeLists.txt  a_test.cpp
conan_example_project/a/test_package/: conanfile.py
conan_example_project/b/: CMakeLists.txt  conanfile.py
conan_example_project/b/src/: CMakeLists.txt
conan_example_project/b/test/: CMakeLists.txt
conan_example_project/b/test_package/: conanfile.py
conan_example_project/c/: CMakeLists.txt  conanfile.py
conan_example_project/c/src/: CMakeLists.txt
conan_example_project/c/test/: CMakeLists.txt
conan_example_project/c/test_package/: conanfile.py
conan_example_project/d/: CMakeLists.txt  conanfile.py
conan_example_project/d/src/: CMakeLists.txt  d.c
conan_example_project/d/test/: CMakeLists.txt
conan_example_project/d/test_package/: conanfile.py
doc/: configuration.adoc
doc/example/: config-build.json
mumoco/: __init__.py  errors.py  main.py  mumoco.py  mumoco_api.py
mumoco/conanbuilder/: buildersettings.py  package.py  runner.py
src/: exceptions.py  mumoco.py  mumoco_api.py  mumoco_cli.py
src/conanbuilder/: buildersettings.py  configreader.py  package.py  remote.py  runner.py  signature.py
tests/: test_buildersettings.py  test_signature.py
tests/conanbuilder/: test_buildersettings.py  test_configreader.py  test_package.py  test_remote.py  test_runner.py  test_signature.py
tests/integrationtests/create/: test_create.py
tests/integrationtests/remotes/: config-build.json  empty_remote.json  mumoco.json  test_remotes.py
tests/integrationtests/source/: config-build.json  test_source.py
tests/integrationtests/source/sourcetest_src_in_git/: conanfile.py
tests/integrationtests/source/sourcetest_src_in_git/test_package/: conanfile.py
