[tool.poetry]
name = "mumoco"
version = "0.2.3"
description = "This is tool helps to work with multiple conan modules simultaneously."
license = "MIT"
homepage = "https://github.com/disroop/mumoco"
authors = ["michel <michel.meyer@disroop.ch>"]

[tool.poetry.urls]
Issues = "https://github.com/disroop/mumoco/issues"

[tool.poetry.dependencies]
python = "^3.8"
conan = "^1.36.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
pytest-cov = "^2.12.0"
mypy = "^0.812"
black = "21.5b1"

[tool.poetry.scripts]
mumoco = "src.mumoco:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
