[metadata]
name = mumoco
version = 0.0.1
author = Michel Meyer
author_email = michel.meyer@disroop.ch
description = This is tool helps to work with multiple conan modules simultaneously.
long_description = file: README.adoc
long_description_content_type = text/markdown
url = https://github.com/disroop/mumoco
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests